test/fixtures/public/fail/semantic/extra/repeatName.jmm
/*  REASON:
    Variable already defined in the scope
*/

class T {
    int a;
    boolean a;
    public static void main(String[] a) {
        int a;
    }
}
